--- a/index.ipynb
+++ b/index.ipynb
@@ -9,6 +9,7 @@
     "## Índice\n",
     "\n",
     "1. Forja de metales\n",
+    "    * [Forja libre en frío y en caliente](forja/forja_libre.ipynb)\n",
     "    * [Examen de Tecnología de Fabricación (GIA) 6/9/2017](forja/2017-09-06_forja.ipynb)\n",
     "1. Laminación plana de metales\n",
     "    * [Examen de Tecnología de Fabricación (GIA) 24/6/2017](laminacion/2017-06_examen.ipynb)\n",
@@ -43,7 +44,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
